--- a/src/styles/ExplorePost/ExplorePost.module.css
+++ b/src/styles/ExplorePost/ExplorePost.module.css
@@ -1,16 +1,20 @@
 .explorePostWrapper {
-  position: relative;
+  display: flex;
+  flex-direction: column;
   max-width: 215px;
   width: 100%;
-  height: 315px;
+  height: 100%;
   cursor: pointer;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Noto Sans",
     Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji";
+    margin-bottom: 8px;
+    margin-right: 8px;
 }
 
 .explorePostVideo {
   width: 100%;
   height: 100%;
+  max-height: 315px;
   background-color: rgba(22, 24, 35, 0.06);
   cursor: pointer;
   overflow: hidden;
