--- a/src/styles/Navbar/Navbar.module.css
+++ b/src/styles/Navbar/Navbar.module.css
@@ -67,10 +67,10 @@
     display: flex;
     align-items: center;
     background: rgba(22, 24, 35, 0.1);
-    border-radius: 10px;
+    border-radius: 100px;
     overflow: hidden;
     padding: 10px;
-    width: 24rem;
+    width: 1250px;
 }
 
 .navSearch {
