--- a/src/styles/Post/Post.module.css
+++ b/src/styles/Post/Post.module.css
@@ -1,230 +1,249 @@
 .postContainer {
-    display: flex;
-    position: relative;
-    margin-bottom: 24px;
+  display: flex;
+  position: relative;
+  margin-bottom: 24px;
 }
 
 .postContainer:after {
-    content: "";
-    position: absolute;
-    left: 0;
-    bottom: 0;
-    width: 100%;
-    height: 1px;
-    -webkit-transform: scaleY(0.5);
-    -moz-transform: scaleY(0.5);
-    -ms-transform: scaleY(0.5);
-    transform: scaleY(0.5);
-    background: rgba(22, 24, 35, .2);
+  content: "";
+  position: absolute;
+  left: 0;
+  bottom: 0;
+  width: 100%;
+  height: 1px;
+  -webkit-transform: scaleY(0.5);
+  -moz-transform: scaleY(0.5);
+  -ms-transform: scaleY(0.5);
+  transform: scaleY(0.5);
+  background: rgba(22, 24, 35, 0.2);
 }
 
 .postWrapper {
-    display: flex;
-    width: 100%;
-    margin-bottom: 1rem;
+  display: flex;
+  width: 100%;
+  margin-bottom: 1rem;
 }
 
 .post {
-    width: 100%;
-    margin-left: 0.75rem;
+  width: 100%;
+  margin-left: 0.75rem;
 }
 
 .postProfileContainer {
-    display: flex;
-    justify-content: space-between;
-    margin-bottom: 1rem;
+  display: flex;
+  justify-content: space-between;
+  margin-bottom: 1rem;
 }
 
 .profileMeta {
-    display: flex;
+  display: flex;
 }
 
 .postProfile {
-
 }
 
 .postProfile > img {
-    width: 50px;
-    height: 50px;
-    border-radius: 50%;
-    object-fit: cover;
+  width: 50px;
+  height: 50px;
+  border-radius: 50%;
+  object-fit: cover;
 }
 
 .profileUsername {
-    font-family: 'Oswald', sans-serif;
-    font-weight: 500;
-    font-size: 18px;
-    line-height: 28px;
-    display: inline-block;
-    margin: 0 4px 0 0;
-    letter-spacing: 0.5px;
+  font-family: "Oswald", sans-serif;
+  font-weight: 500;
+  font-size: 18px;
+  line-height: 28px;
+  display: inline-block;
+  margin: 0 4px 0 0;
+  letter-spacing: 0.5px;
 }
 
 .profileName {
-    display: flex;
-    align-items: center;
-    line-height: 28px;
-    font-family: 'Oswald', sans-serif;
-    font-weight: 300;
-    font-size: 14px;
-    letter-spacing: 0.5px;
+  display: flex;
+  align-items: center;
+  line-height: 28px;
+  font-family: "Oswald", sans-serif;
+  font-weight: 300;
+  font-size: 14px;
+  letter-spacing: 0.5px;
 }
 
 .postMedia {
-    display: flex;
+  display: flex;
 }
 
 .postMediaVideoContainer {
-    width: calc(0.56 * (475px + ((100vw - 768px) / 1152) * 100));
-    height: calc(475px + ((100vw - 768px) / 1152) * 100);
-    background-color: rgb(0, 0, 0);
-    object-fit: cover;
-    border-radius: 4px;
-    cursor: pointer;
+  /* width: calc(0.55 * (475px + ((100vw - 768px) / 1152) * 100)); */
+  height: calc(400px + (100vw - 768px) / 1152 * 200);
+  background-color: rgb(0, 0, 0);
+  object-fit: cover;
+  border-radius: 4px;
+  cursor: pointer;
 }
 
 .postMediaVideoContainer > video {
-    display: block;
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-    border-radius: 4px;
+  display: block;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  border-radius: 4px;
 }
 
 .postControls {
-    display: flex;
-    flex-direction: column;
-    justify-content: flex-end;
-    align-items: center;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-end;
+  align-items: center;
+  margin-left: 1rem;
 }
 
 .postControl {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    border: 1px solid rgba(22, 24, 35, .06);
-    border-radius: 50%;
-    margin-left: 1rem;
-    width: 48px;
-    height: 48px;
-    margin-bottom: 0.5rem;
-    cursor: pointer;
-    background-color: transparent;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border: none;
+  border-radius: 50%;
+  width: 48px;
+  height: 48px;
+  cursor: pointer;
+  background-color: rgba(22, 24, 35, 0.06);
+  margin: 8px 0 6px 0;
 }
 
 .postControl > svg {
-    height: 24px;
-    width: 24px;
+  fill: #111111;
+  height: 24px;
+  width: 24px;
+}
+
+.liked {
+    background-color: #2ba0ff;
+}
+
+.liked + h3 {
+    color: #2ba0ff;
+}
+
+.liked > svg {
+    fill: #fff;
+    stroke: #fff;
 }
 
 .postDeleteBtn {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    border: none;
-    cursor: pointer;
-    background-color: transparent;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border: none;
+  cursor: pointer;
+  background-color: transparent;
 }
 
 .postDeleteBtn > svg {
-    height: 22px;
-    width: 22px;
+  height: 22px;
+  width: 22px;
 }
 
-.postDeleteBtn > svg:hover { 
-    opacity: .65;
+.postDeleteBtn > svg:hover {
+  opacity: 0.65;
 }
 
-.postDeleteBtn > svg:active { 
-    opacity: .95;
+.postDeleteBtn > svg:active {
+  opacity: 0.95;
 }
-
 
 .postControl:hover {
-    background-color: #00000011;
+  background-color: #00000011;
 }
 
+.stat {
+  color: rgb(28, 30, 41);
+  font-weight: 700;
+  font-size: 11px;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Noto Sans",
+    Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji";
+}
 
 .caption {
-    display: inline-block;
-    font-family: 'Oswald', sans-serif;
-    font-weight: 300;
-    font-size: 16px;
-    line-height: 25px;
-    margin-bottom: 0px;
-    word-break: break-word;
-    letter-spacing: 0.15px;
+  display: inline-block;
+  font-family: "Oswald", sans-serif;
+  font-weight: 300;
+  font-size: 16px;
+  line-height: 25px;
+  margin-bottom: 0px;
+  word-break: break-word;
+  letter-spacing: 0.15px;
 }
 
 .caption > a {
-    text-decoration: none;
-    color: black;
+  text-decoration: none;
+  color: black;
 }
 
 .hashtag {
-    font-weight: 400;
+  font-weight: 400;
 }
 
 .hashtag:hover {
-    text-decoration: underline;
-    cursor: pointer;
+  text-decoration: underline;
+  cursor: pointer;
 }
 
 .hashtagSpace {
-    display: inline-block;
-    width: 4px;
+  display: inline-block;
+  width: 4px;
 }
 
 .postSound {
-    margin-top: 8px;
-    display: flex;
-    align-items: center;
+  margin-top: 8px;
+  display: flex;
+  align-items: center;
 }
 
 .postSound > svg {
-    height: 14px;
-    width: 14px;
-    margin-right: 6px;
+  height: 14px;
+  width: 14px;
+  margin-right: 6px;
 }
 
 .soundCaption {
-    display: inline-block;
-    font-family: 'Oswald', sans-serif;
-    font-weight: 400;
-    font-size: 15px;
-    line-height: 25px;
-    margin: 0;
+  display: inline-block;
+  font-family: "Oswald", sans-serif;
+  font-weight: 400;
+  font-size: 15px;
+  line-height: 25px;
+  margin: 0;
 }
 
 .soundCaption:hover {
-    text-decoration: underline;
-    cursor: pointer;
+  text-decoration: underline;
+  cursor: pointer;
 }
 
 .followContainer {
-    height: 10px;
-    position: relative;
-    top: 4px;
+  height: 10px;
+  position: relative;
+  top: 4px;
 }
 
 .followBtn {
-    display: flex;
-    color: #2ba0ff;
-    background-color: transparent;
-    border: 1px solid #2ba0ff;
-    font-family: 'Bebas Neue', cursive;
-    font-weight: 200;
-    font-size: 16px;
-    height: 10px;
-    margin-bottom: 2rem;
-    justify-content: center;
-    align-items: center;
-    border-radius: 4px;
-    cursor: pointer;
-    padding: 14px 1.5rem;
-    transition: background-color 200ms ease-in-out;
+  display: flex;
+  color: #2ba0ff;
+  background-color: transparent;
+  border: 1px solid #2ba0ff;
+  font-family: "Bebas Neue", cursive;
+  font-weight: 200;
+  font-size: 16px;
+  height: 10px;
+  margin-bottom: 2rem;
+  justify-content: center;
+  align-items: center;
+  border-radius: 4px;
+  cursor: pointer;
+  padding: 14px 1.5rem;
+  transition: background-color 200ms ease-in-out;
 }
 
 .followBtn:hover {
-    background-color: #2ba0ff21;
+  background-color: #2ba0ff21;
 }
