--- a/src/styles/Post/Post.module.css
+++ b/src/styles/Post/Post.module.css
@@ -39,9 +39,14 @@
   display: flex;
 }
 
-.postProfile {
+.profileUsername:hover {
+  text-decoration: underline;
+  cursor: pointer;
 }
 
+.postProfile:hover {
+  cursor: pointer;
+}
 .postProfile > img {
   width: 50px;
   height: 50px;
