--- a/src/styles/BigPost/BigPost.module.css
+++ b/src/styles/BigPost/BigPost.module.css
@@ -59,6 +59,7 @@
 .postUserWrapper {
     cursor: pointer;
     display: flex;
+    width: 100%;
 }
 
 .avatar > img {
@@ -79,6 +80,7 @@
     display: flex;
     flex-direction: column;
     margin: 0 10px;
+    width: 100%;
 }
 
 .profileUsername {
@@ -95,6 +97,7 @@
     display: flex;
     align-items: center;
     line-height: 14px;
+    width: 100%;
 }
 
 .nameMeta > span {
