--- a/src/styles/SideBar/SideBar.module.css
+++ b/src/styles/SideBar/SideBar.module.css
@@ -7,22 +7,37 @@
         display: flex;
         width: 75px;
         border-right: 1px solid rgba(22, 24, 35, .12);
+        position: fixed;
+        bottom: 0;
+        left: 0;
+        top: 60px;
     }
 
     .sideBarWrapper {
         display: flex;
         flex-direction: column;
-        width: 100%;
         margin-top: 1rem;
         padding: 0 1rem;
+        position: fixed;
+        bottom: 0;
+        left: 0;
+        top: 60px;
+    }
+
+    .sideBarControlsWrapper {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
     }
 
     .sideBarItem {
-        padding: 1rem 0;
+        padding: 22px 0;
         display: flex;
         align-items: center;
         justify-content: center;
         margin: 0;
+        width: 24px;
+        height: 24px;
     }
 
     .sideBarItem svg {
