--- a/src/styles/LoginModal/LoginModal.module.css
+++ b/src/styles/LoginModal/LoginModal.module.css
@@ -1,201 +1,234 @@
-
-
 .modalContainer {
-    display: none;
-    z-index: 1000;
-    position: fixed;
-    inset: 0px;
-    overflow: auto;
-    outline: 0px;
-    transition: all 500ms cubic-bezier(0.075, 0.82, 0.165, 1) 0s;
-    opacity: 1;
+  display: none;
+  z-index: 1000;
+  position: fixed;
+  inset: 0px;
+  overflow: auto;
+  outline: 0px;
+  transition: all 500ms cubic-bezier(0.075, 0.82, 0.165, 1) 0s;
+  opacity: 1;
 }
 
 .modalActive {
-    display: flex !important;
+  display: flex !important;
 }
 
 .modalWrapper {
-    background: rgba(0, 0, 0, 0.5);
-    position: fixed;
-    inset: 0px;
-    width: 100vw;
-    height: 100%;
-    display: flex;
-    -webkit-box-pack: center;
-    justify-content: center;
-    -webkit-box-align: center;
-    align-items: center;
-    z-index: 1000;
+  background: rgba(0, 0, 0, 0.5);
+  position: fixed;
+  inset: 0px;
+  width: 100vw;
+  height: 100%;
+  display: flex;
+  -webkit-box-pack: center;
+  justify-content: center;
+  -webkit-box-align: center;
+  align-items: center;
+  z-index: 1000;
 }
 
 .loginModalContainer {
-    border-radius: 8px;
-    transition: all 300ms cubic-bezier(0.075, 0.82, 0.165, 1) 0s;
-    transform: none;
-    margin: auto;
-    max-height: 800px;
-    height: 70%;
-    overflow: hidden;
-    background-color: rgb(255, 255, 255);
-    position: relative;
-    z-index: 1001;
+  border-radius: 8px;
+  transition: all 300ms cubic-bezier(0.075, 0.82, 0.165, 1) 0s;
+  transform: none;
+  margin: auto;
+  max-height: 800px;
+  height: 70%;
+  overflow: hidden;
+  background-color: rgb(255, 255, 255);
+  position: relative;
+  z-index: 1001;
 }
 
 .loginModalWrapper {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    width: 475px;
-    height: 100%;
-    padding: 48px 48px 0 48px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 475px;
+  height: 100%;
+  padding: 48px 48px 0 48px;
 }
 
 .loginModalWrapper > h2 {
-    font-family: 'Oswald', sans-serif;
-    font-weight: 600;
-    letter-spacing: 1.25px;
-    font-size: 30px;
-    padding: 0;
-    margin: 0;
+  font-family: "Oswald", sans-serif;
+  font-weight: 600;
+  letter-spacing: 1.25px;
+  font-size: 30px;
+  padding: 0;
+  margin: 0;
 }
 
 .loginList {
-    flex: 1 1 0%;
-    overflow: auto;
-    padding: 0;
-    margin: 0;
-    width: 100%;
-    margin-top: 14px;
+  flex: 1 1 0%;
+  overflow: auto;
+  padding: 0;
+  margin: 0;
+  width: 100%;
+  margin-top: 14px;
 }
 
 .loginItem {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    font-family: 'Oswald', sans-serif;
-    color: rgb(22, 24, 35);
-    border: 1px solid rgba(22, 24, 35, 0.12);
-    padding: 0px 12px;
-    height: 44px;
-    position: relative;
-    cursor: pointer;
-    margin-bottom: 16px;
-    word-break: keep-all;
-    white-space: nowrap;
-    background: rgb(255, 255, 255);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-family: "Oswald", sans-serif;
+  color: rgb(22, 24, 35);
+  border: 1px solid rgba(22, 24, 35, 0.12);
+  padding: 0px 12px;
+  height: 44px;
+  position: relative;
+  cursor: pointer;
+  margin-bottom: 16px;
+  word-break: keep-all;
+  white-space: nowrap;
+  background: rgb(255, 255, 255);
 }
 
 .loginItem > h3 {
-    font-weight: 400;
-    font-size: 14px;
+  font-weight: 400;
+  font-size: 14px;
 }
 
 .registerWrapper {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    color: rgb(22, 24, 35);
-    font-family: 'Oswald', sans-serif;
-    height: 64px;
-    border-top: 1px solid rgba(22, 24, 35, 0.12);
-    width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  color: rgb(22, 24, 35);
+  font-family: "Oswald", sans-serif;
+  height: 64px;
+  border-top: 1px solid rgba(22, 24, 35, 0.12);
+  width: 100%;
 }
 
 .registerWrapper > h3 {
-    font-size: 16px;
-    line-height: 18px;
-    font-weight: 400;
-    letter-spacing: 0.25px;
+  font-size: 16px;
+  line-height: 18px;
+  font-weight: 400;
+  letter-spacing: 0.25px;
 }
 
 .spanSeparator {
-    width: 4px;
+  width: 4px;
 }
 
 .registerSpan {
-    font-size: 16px;
-    line-height: 18px;
-    font-weight: 400;
-    color: #2095f5;
+  font-size: 16px;
+  line-height: 18px;
+  font-weight: 400;
+  color: #2095f5;
 }
 
 .registerSpan:hover {
-    cursor: pointer;
-    text-decoration: underline;
+  cursor: pointer;
+  text-decoration: underline;
 }
 
 .inputContainer {
-    display: flex;
-    flex-direction: column;
-    margin-bottom: 0.5rem;
-    transition: all 0.3s ease 0s;
+  display: flex;
+  flex-direction: column;
+  margin-bottom: 0.5rem;
+  transition: all 0.3s ease 0s;
 }
 
 .inputContainer > h3 {
-    font-family: 'Oswald', sans-serif;
-    font-weight: 400;
-    letter-spacing: 0.5px;
-    font-size: 16px;
-    margin: 0;
-    padding: 8px 0;
+  font-family: "Oswald", sans-serif;
+  font-weight: 400;
+  letter-spacing: 0.5px;
+  font-size: 16px;
+  margin: 0;
+  padding: 8px 0;
 }
 .inputContainer > h4 {
-    font-family: 'Oswald', sans-serif;
-    font-weight: 400;
-    letter-spacing: 0.5px;
-    font-size: 14px;
-    margin: 0;
-    padding: 8px 0;
-    color: rgba(22, 24, 35, 0.75);
-    cursor: pointer;
+  font-family: "Oswald", sans-serif;
+  font-weight: 400;
+  letter-spacing: 0.5px;
+  font-size: 14px;
+  margin: 0;
+  padding: 8px 0;
+  color: rgba(22, 24, 35, 0.75);
+  cursor: pointer;
 }
 
-.inputContainer > h4:hover{
-    text-decoration: underline;
+.inputContainer > h4:hover {
+  text-decoration: underline;
 }
 
 .loginForm {
-    width: 475px;
-    padding: 1rem 4rem;
-    flex: 1 1;
+  width: 475px;
+  padding: 1rem 4rem;
+  flex: 1 1;
 }
 
 .loginInput {
-    font-family: 'Oswald', sans-serif;
-    font-weight: 300;
-    letter-spacing: 0.75px;
-    background: rgba(22, 24, 35, 0.06);
-    border: 1px solid rgba(22, 24, 35, 0.12);
-    border-radius: 2px;
-    padding-inline-start: 12px;
-    color: rgb(22, 24, 35);
-    line-height: 100%;
-    outline: none;
-    font-size: 16px;
-    height: 44px;
-    caret-color: #2095f5;
-    width: 100%;
-    padding-inline-end: unset;
+  font-family: "Oswald", sans-serif;
+  font-weight: 300;
+  letter-spacing: 0.75px;
+  background: rgba(22, 24, 35, 0.06);
+  border: 1px solid rgba(22, 24, 35, 0.12);
+  border-radius: 2px;
+  padding-inline-start: 12px;
+  color: rgb(22, 24, 35);
+  line-height: 100%;
+  outline: none;
+  font-size: 16px;
+  height: 44px;
+  caret-color: #2095f5;
+  width: 100%;
+  padding-inline-end: unset;
 }
 
 .passwordInput {
-    
 }
 
 .loginFormSubmit {
-    margin: 1rem 0;
+  margin: 1rem 0;
+  width: 100%;
+  background-color: #2ba0ff;
+  color: #fff;
+  font-family: "Bebas Neue", cursive;
+  font-weight: 200;
+  font-size: 20px;
+  height: 35px;
+  justify-content: center;
+  align-items: center;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+  padding: 6px 8px;
+}
+
+.back {
+    display: none;
+}
+
+@media (max-width: 450px) {
+  .loginModalContainer {
+    height: 100%;
     width: 100%;
-    background-color: #2ba0ff;
-    color: #fff;
-    font-family: 'Bebas Neue', cursive;
-    font-weight: 200;
-    font-size: 20px;
-    height: 35px;
-    justify-content: center;
-    align-items: center;
-    border: none;
-    border-radius: 4px;
-    cursor: pointer;
-    padding: 6px 8px;
+    max-height: none;
+    margin: 0;
+  }
+
+  .loginModalWrapper {
+    padding-right: 0;
+    padding-left: 0;
+    width: auto;
+    min-width: 325px;
+  }
+
+  .loginList {
+    padding: 1rem;
+  }
+
+  .back {
+    display: block;
+    width: 24px;
+    height: 24px;
+    padding: 4px;
+    z-index: 1002;
+    background-color: rgba(22, 24, 35, 0.06);
+    border-radius: 50%;
+    margin-left: 1rem;
+    margin-top: 1rem;
+  }
 }
