--- a/src/styles/Profile/Profile.module.css
+++ b/src/styles/Profile/Profile.module.css
@@ -240,3 +240,25 @@
   height: 20px;
   fill: #fff;
 }
+
+@media (max-width: 450px) {
+  .profileContainer {
+    max-width: none;
+  }
+
+  .profileWrapper {
+    max-width: 390px;
+    height: 100%;
+  }
+
+  .profileBodyWrapper {
+    height: auto;
+    flex-wrap: wrap;
+  }
+
+  .profilePostContainer {
+    min-width: 80px;
+    height: 170px;
+    margin-bottom: 16px;
+  }
+}
