--- a/src/styles/SideBar/SideBar.module.css
+++ b/src/styles/SideBar/SideBar.module.css
@@ -3,10 +3,14 @@
 }
 
 @media (max-width: 1050px) {
+    .selected {
+        fill: #2ba0ff;
+    }
+
     .sideBarContainer {
         display: flex;
         width: 75px;
-        border-right: 1px solid rgba(22, 24, 35, .12);
+        /* border-right: 1px solid rgba(22, 24, 35, .12); */
         position: fixed;
         bottom: 0;
         left: 0;
@@ -17,17 +21,19 @@
         display: flex;
         flex-direction: column;
         margin-top: 1rem;
-        padding: 0 1rem;
         position: fixed;
         bottom: 0;
         left: 0;
-        top: 60px;
+        padding: 0 6px;
+        border-right: 1px solid rgba(22, 24, 35, .12);
+        top: 0;
     }
 
     .sideBarControlsWrapper {
         display: flex;
         flex-direction: column;
         align-items: center;
+        margin-top: 60px;    
     }
 
     .sideBarItem {
