--- a/src/styles/EditProfile/EditProfile.module.css
+++ b/src/styles/EditProfile/EditProfile.module.css
@@ -1,254 +1,295 @@
 .editContainer {
-    position: absolute;
-    left: 0;
-    width: 100vw;
-    height: 100vh;
-    background-color: rgb(248, 248, 248);
-    overflow: hidden;
+  position: absolute;
+  left: 0;
+  width: 100vw;
+  height: 100vh;
+  background-color: rgb(248, 248, 248);
+  overflow: hidden;
 }
 
 .editWrapper {
-    display: flex;
-    width: 1200px;
-    height: 100%;
-    overflow-y: hidden;
-    margin: 0px auto;
-    margin-top: 100px;
-    padding-bottom: 16px;
-    background-color: #fff;
-    border-radius: 6px;
-    box-shadow: rgba(0, 0, 0, 0.16) 0px 1px 4px;
+  display: flex;
+  width: 1200px;
+  height: 100%;
+  overflow-y: hidden;
+  margin: 0px auto;
+  margin-top: 100px;
+  padding-bottom: 16px;
+  background-color: #fff;
+  border-radius: 6px;
+  box-shadow: rgba(0, 0, 0, 0.16) 0px 1px 4px;
 }
 
 .editLeftWrapper {
-    margin-top: 25px;
-    overflow: hidden auto;
-    overscroll-behavior-y: contain;
-    perspective: 1px;
-    transform-style: preserve-3d;
-    perspective-origin: right top;
-    width: 225px;
-    height: 100%;
-    /* border-right: 1px solid rgba(27, 31, 35, 0.15); */
+  margin-top: 25px;
+  overflow: hidden auto;
+  overscroll-behavior-y: contain;
+  perspective: 1px;
+  transform-style: preserve-3d;
+  perspective-origin: right top;
+  width: 225px;
+  height: 100%;
+  /* border-right: 1px solid rgba(27, 31, 35, 0.15); */
 }
 
 .tabsList {
-    padding: 0;
-    margin: 0;
-    list-style: none;
-    border-radius: 6px;
-
+  padding: 0;
+  margin: 0;
+  list-style: none;
+  border-radius: 6px;
 }
 
 .tabItem {
-    padding: 6px 0;
-    margin: 0;
-    margin-left: 14px;
-    cursor: pointer;
-    position: relative;
-    list-style: none;
-    border-radius: 4px;
-    /* color: #fdfdfd;
+  padding: 6px 0;
+  margin: 0;
+  margin-left: 14px;
+  cursor: pointer;
+  position: relative;
+  list-style: none;
+  border-radius: 4px;
+  /* color: #fdfdfd;
     background-color: #74bfff; */
 }
 
 .tabSelected {
-    background-color: #f0f0f0;
+  background-color: #f0f0f0;
 }
 
-.tabSelected::after{
-    content: "";
-    background-color: #2ba0ff;
-    border-radius: 6px;
-    height: 100%;
-    position: absolute;
-    top: 0;
-    left: -8px;
-    width: 4px;
+.tabSelected::after {
+  content: "";
+  background-color: #2ba0ff;
+  border-radius: 6px;
+  height: 100%;
+  position: absolute;
+  top: 0;
+  left: -8px;
+  width: 4px;
 }
 
 .tabItem > h3 {
-    font-family: -apple-system,BlinkMacSystemFont,"Segoe UI","Noto Sans",Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji";
-    font-weight: 700;
-    font-size: 14px;
-    margin: 0;
-    margin-left: 24px;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Noto Sans",
+    Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji";
+  font-weight: 700;
+  font-size: 14px;
+  margin: 0;
+  margin-left: 24px;
 }
 
 .editRightWrapper {
-    margin-top: 50px;
-    display: flex;
-    width: 100%;
-    height: 100%;
+  margin-top: 50px;
+  display: flex;
+  width: 100%;
+  height: 100%;
 }
 
 .settingsContainer {
-    margin: 0 75px;
-    width: 100%;
-    display: flex;
-    flex-direction: column;
+  margin: 0 75px;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
 }
 
 .settingsHeader {
-    width: 100%;
-    font-family: -apple-system,BlinkMacSystemFont,"Segoe UI","Noto Sans",Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji";
-    font-weight: 700;
-    font-size: 28px;
-    margin: 0;
-    padding-bottom: 10px;
-    border-bottom: 1px solid #e0e0e0;
+  width: 100%;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Noto Sans",
+    Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji";
+  font-weight: 700;
+  font-size: 28px;
+  margin: 0;
+  padding-bottom: 10px;
+  border-bottom: 1px solid #e0e0e0;
 }
 
 .settingsBody {
-    padding: 22px 0;
-    width: 100%;
-    height: 100%;
+  padding: 22px 0;
+  width: 100%;
+  height: 100%;
 }
 
 .settingsGroup {
-    width: 100%;
-    height: auto;
-    display: flex;
+  width: 100%;
+  height: auto;
+  display: flex;
 }
 
 .settingsSubgroup {
-    display: flex;
-    flex-direction: column;
-    width: 100%;
-    height: 100%;
-    display: flex;
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  height: 100%;
+  display: flex;
 }
 
 .settingsItem {
-    width: auto;
-    margin-bottom: 1rem;
+  width: auto;
+  margin-bottom: 1rem;
 }
 
-.settingsWidth100{
-    width: 100%;
+.settingsWidth100 {
+  width: 100%;
 }
 
 .settingsMarginLeft {
-    margin-left: 2rem;
+  margin-left: 2rem;
 }
 
 .settingsPosition {
-    position: relative;
-    height: fit-content;
+  position: relative;
+  height: fit-content;
 }
 
 .settingsLabel {
-    width: 100%;
-    font-family: -apple-system,BlinkMacSystemFont,"Segoe UI","Noto Sans",Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji";
-    font-weight: 700;
-    font-size: 16px;
-    margin: 0;
-    padding-bottom: 10px;
+  width: 100%;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Noto Sans",
+    Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji";
+  font-weight: 700;
+  font-size: 16px;
+  margin: 0;
+  padding-bottom: 10px;
 }
 
 .settingsAvatar {
-    border-radius: 50%;
-    box-shadow: rgba(14, 30, 37, 0.12) 0px 2px 4px 0px, rgba(14, 30, 37, 0.32) 0px 2px 16px 0px;
-    width: 175px;
-    height: 175px;
-    cursor: pointer;
+  border-radius: 50%;
+  box-shadow: rgba(14, 30, 37, 0.12) 0px 2px 4px 0px,
+    rgba(14, 30, 37, 0.32) 0px 2px 16px 0px;
+  width: 175px;
+  height: 175px;
+  cursor: pointer;
 }
 
 .settingsEditAvatarBtn {
-    font-family: -apple-system,BlinkMacSystemFont,"Segoe UI","Noto Sans",Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji";
-    box-shadow: rgba(0, 0, 0, 0.05) 0px 0px 0px 1px, rgb(209, 213, 219) 0px 0px 0px 1px inset;
-    border-radius: 4px;
-    position: absolute;
-    bottom: 0;
-    left: 0;
-    padding: 6px 10px;
-    font-size: 12px;
-    font-weight: 600;
-    background-color: #fff;
-    cursor: pointer;
-    z-index: 100;
-    display: flex;
-    align-items: center;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Noto Sans",
+    Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji";
+  box-shadow: rgba(0, 0, 0, 0.05) 0px 0px 0px 1px,
+    rgb(209, 213, 219) 0px 0px 0px 1px inset;
+  border-radius: 4px;
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  padding: 6px 10px;
+  font-size: 12px;
+  font-weight: 600;
+  background-color: #fff;
+  cursor: pointer;
+  z-index: 100;
+  display: flex;
+  align-items: center;
 }
 
 .settingsEditAvatarBtn:hover {
-    background-color: #f1f1f1;
+  background-color: #f1f1f1;
 }
 
 .settingsEditAvatarBtn:active {
-    background-color: #e6e6e6;
+  background-color: #e6e6e6;
 }
 
 .settingsEditAvatarBtn > svg {
-    width: 12px;
-    height: 12px;
-    margin-right: 4px;
+  width: 12px;
+  height: 12px;
+  margin-right: 4px;
 }
 
 .settingsInput {
-    width: 100%;
-    position: relative;
-    border: 1px solid rgba(22, 24, 35, 0.12);
-    border-radius: 4px;
-    outline: none;
-    padding: 8px;
-    margin-bottom: 12px;
+  width: 100%;
+  position: relative;
+  border: 1px solid rgba(22, 24, 35, 0.12);
+  border-radius: 4px;
+  outline: none;
+  padding: 8px;
+  margin-bottom: 12px;
 }
 
 .settingsInputError {
-    border: 1px solid #ffa4a4;
+  border: 1px solid #ffa4a4;
 }
 
 .settingsInputErrorMessage {
-    font-family: -apple-system,BlinkMacSystemFont,"Segoe UI","Noto Sans",Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji";
-    font-size: 12px;
-    font-weight: 400;
-    color: #ff3a3a;
-
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Noto Sans",
+    Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji";
+  font-size: 12px;
+  font-weight: 400;
+  color: #ff3a3a;
 }
 
 .settingsTextarea {
-    font-family: -apple-system,BlinkMacSystemFont,"Segoe UI","Noto Sans",Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji";
-    width: 100%;
-    height: 4rem;
-    position: relative;
-    border: 1px solid rgba(22, 24, 35, 0.12);
-    border-radius: 4px;
-    outline: none;
-    padding: 8px;
-    margin-bottom: 12px;
-    resize: none;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Noto Sans",
+    Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji";
+  width: 100%;
+  height: 4rem;
+  position: relative;
+  border: 1px solid rgba(22, 24, 35, 0.12);
+  border-radius: 4px;
+  outline: none;
+  padding: 8px;
+  margin-bottom: 12px;
+  resize: none;
 }
 
 .submitProfile {
-    text-decoration: none;
-    font-family: -apple-system,BlinkMacSystemFont,"Segoe UI","Noto Sans",Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji";
-    font-size: 14px;
-    font-weight: 500;
-    position: relative;
-    border: 1px solid rgba(240,246,252,0.1);
-    height: 32px;
-    width: 132px;
-    border: none;
-    border-radius: 4px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    background:#2ba0ff;
-    color: #fff;
-    cursor: pointer;
+  text-decoration: none;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Noto Sans",
+    Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji";
+  font-size: 14px;
+  font-weight: 500;
+  position: relative;
+  border: 1px solid rgba(240, 246, 252, 0.1);
+  height: 32px;
+  width: 132px;
+  border: none;
+  border-radius: 4px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background: #2ba0ff;
+  color: #fff;
+  cursor: pointer;
 }
 
 .submitProfile:hover {
-    background:#1c98fd;
+  background: #1c98fd;
 }
 
 .submitProfile:active {
-    background:#068fff;
+  background: #068fff;
 }
 
 .submitProfileInactive {
-    color: #f1f1f1;
-    background-color: #2ba0ffa8 !important;
-    cursor: default;
+  color: #f1f1f1;
+  background-color: #2ba0ffa8 !important;
+  cursor: default;
+}
+
+@media (max-width: 450px) {
+  .editWrapper {
+    flex-direction: column;
+    margin-top: 0;
+    width: 390px;
+    align-items: center;
+  }
+
+  .editLeftWrapper {
+    height: 0;    
+    margin-top: 75px;
+    margin-bottom: 50px;
+    overflow: unset;
+    width: 100%;
+  }
+
+  .editRightWrapper {
+    justify-content: center;
+    max-width: 390px;
+  }
+
+  .tabsList {
+    display: flex;
+  }
+
+  .tabItem {
+    min-width: 150px;
+    margin-right: 1rem;
+  }
+  .tabItem > h3 {
+    margin: 0;
+  }
 }
